prevent flickering

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -22,5 +22,21 @@ body
     width: 219px;
     top: 18px;
     left: 510px;
-    border: 10px solid #ad0000;
+    /* border: 10px solid #ad0000; */
+}
+#received-video-1
+{
+    position: absolute;
+    width: 219px;
+    top: 18px;
+    left: 0px;
+    /* border: 10px solid #ad0000; */
+}
+#received-video-2
+{
+    position: absolute;
+    width: 219px;
+    top: 18px;
+    left: 0px;
+    /* border: 10px solid #ad0000; */
 }
